--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ cache: bundler
 rvm:
   - 1.9.3
   - 2.0.0
-  - jruby-19mode
-  - rbx-19mode
-  - ruby-head
-  - jruby-head
-  - rbx-head
   - 2.1.0
+  # - ruby-head
+  # - jruby-19mode
+  # - jruby-head
+  # - rbx-19mode
+  # - rbx-head
 
 matrix:
   fast_finish: true
 
 gemfile:
   - Gemfile
-  - gemfiles/rails-3.0.gemfile
-  - gemfiles/rails-3.1.gemfile
-  - gemfiles/rails-3.2.gemfile
+  # - gemfiles/rails-3.0.gemfile
+  # - gemfiles/rails-3.1.gemfile
+  # - gemfiles/rails-3.2.gemfile
