--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ rvm:
   # fast_finish: true
 
 gemfile:
-  - gemfiles/activerecord-2.3.gemfile
-  - gemfiles/activerecord-3.0.gemfile
-  - gemfiles/activerecord-3.1.gemfile
-  - gemfiles/activerecord-3.2.gemfile
-  - gemfiles/activerecord-4.0.gemfile
+  - gemfiles/activerecord_2.3.gemfile
+  - gemfiles/activerecord_3.0.gemfile
+  - gemfiles/activerecord_3.1.gemfile
+  - gemfiles/activerecord_3.2.gemfile
+  - gemfiles/activerecord_4.0.gemfile
