Updated appraisal gemfiles and included testing against AR 4.1 release

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
   allow_failures:
     - rvm: jruby
     - rvm: rbx
-    - gemfile: gemfiles/activerecord_4.1.beta.gemfile
+    - gemfile: gemfiles/activerecord_4.1.gemfile
 
 gemfile:
   - gemfiles/activerecord_2.3.gemfile
@@ -22,4 +22,4 @@ gemfile:
   - gemfiles/activerecord_3.1.gemfile
   - gemfiles/activerecord_3.2.gemfile
   - gemfiles/activerecord_4.0.gemfile
-  - gemfiles/activerecord_4.1.beta.gemfile
+  - gemfiles/activerecord_4.1.gemfile
