--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ bundler_args: --without development
 sudo: false
 
 rvm:
+  - 1.9.3
   - 2.1.10
   - 2.2.5
   - 2.3.1
@@ -15,6 +16,13 @@ matrix:
   allow_failures:
     - rvm: jruby
     - rvm: rbx
+  exclude:
+    - rvm: 2.1.10
+      gemfile: gemfiles/activerecord_2.3.gemfile
+    - rvm: 2.2.5
+      gemfile: gemfiles/activerecord_2.3.gemfile
+    - rvm: 2.3.1
+      gemfile: gemfiles/activerecord_2.3.gemfile
 
 gemfile:
   - gemfiles/activerecord_2.3.gemfile
