Added 4.2 gemfile to the test matrix.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,4 @@ gemfile:
   - gemfiles/activerecord_3.2.gemfile
   - gemfiles/activerecord_4.0.gemfile
   - gemfiles/activerecord_4.1.gemfile
+  - gemfiles/activerecord_4.2.gemfile
