--- a/.travis.yml
+++ b/.travis.yml
@@ -37,3 +37,4 @@ gemfile:
   - gemfiles/activerecord_4.1.gemfile
   - gemfiles/activerecord_4.2.gemfile
   - gemfiles/activerecord_5.0.gemfile
+  - gemfiles/activerecord_5.1.gemfile
