--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rvm:
   - 1.9.3
   - 2.2.5
   - 2.3.1
+  - 2.4
   - jruby
   - rbx
 
@@ -18,6 +19,10 @@ matrix:
   exclude:
     - rvm: 1.9.3
       gemfile: gemfiles/activerecord_master.gemfile
+    - rvm: 2.2.5
+      gemfile: gemfiles/activerecord_master.gemfile
+    - rvm: 2.3.1
+      gemfile: gemfiles/activerecord_master.gemfile
     - rvm: 1.9.3
       gemfile: gemfiles/activerecord_5.1.gemfile
     - rvm: 1.9.3
@@ -25,6 +30,8 @@ matrix:
     - rvm: 2.2.5
       gemfile: gemfiles/activerecord_2.3.gemfile
     - rvm: 2.3.1
+      gemfile: gemfiles/activerecord_2.3.gemfile
+    - rvm: 2.4
       gemfile: gemfiles/activerecord_2.3.gemfile
 
 gemfile:
