--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,12 @@ matrix:
       gemfile: gemfiles/activerecord_5.1.gemfile
     - rvm: 1.9.3
       gemfile: gemfiles/activerecord_5.0.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/activerecord_4.1.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/activerecord_4.0.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/activerecord_3.2.gemfile
     - rvm: 2.2.5
       gemfile: gemfiles/activerecord_2.3.gemfile
     - rvm: 2.3.1
