--- a/.travis.yml
+++ b/.travis.yml
@@ -8,38 +8,10 @@ rvm:
   - 2.2.5
   - 2.3.1
   - 2.4
+  - 2.5
+  - 2.6
   - jruby
   - rbx
-
-matrix:
-  fast_finish: true
-  allow_failures:
-    - rvm: jruby
-    - rvm: rbx
-    - gemfile: gemfiles/activerecord_master.gemfile
-  exclude:
-    - rvm: 1.9.3
-      gemfile: gemfiles/activerecord_master.gemfile
-    - rvm: 2.2.5
-      gemfile: gemfiles/activerecord_master.gemfile
-    - rvm: 2.3.1
-      gemfile: gemfiles/activerecord_master.gemfile
-    - rvm: 1.9.3
-      gemfile: gemfiles/activerecord_5.1.gemfile
-    - rvm: 1.9.3
-      gemfile: gemfiles/activerecord_5.0.gemfile
-    - rvm: 2.4
-      gemfile: gemfiles/activerecord_4.1.gemfile
-    - rvm: 2.4
-      gemfile: gemfiles/activerecord_4.0.gemfile
-    - rvm: 2.4
-      gemfile: gemfiles/activerecord_3.2.gemfile
-    - rvm: 2.2.5
-      gemfile: gemfiles/activerecord_2.3.gemfile
-    - rvm: 2.3.1
-      gemfile: gemfiles/activerecord_2.3.gemfile
-    - rvm: 2.4
-      gemfile: gemfiles/activerecord_2.3.gemfile
 
 gemfile:
   - gemfiles/activerecord_2.3.gemfile
@@ -49,4 +21,64 @@ gemfile:
   - gemfiles/activerecord_4.2.gemfile
   - gemfiles/activerecord_5.0.gemfile
   - gemfiles/activerecord_5.1.gemfile
+  - gemfiles/activerecord_6.0.gemfile
   - gemfiles/activerecord_master.gemfile
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - rvm: jruby
+    - rvm: rbx
+    - gemfile: gemfiles/activerecord_master.gemfile
+  exclude:
+    - rvm: 1.9.3
+      gemfile: gemfiles/activerecord_5.0.gemfile
+    - rvm: 1.9.3
+      gemfile: gemfiles/activerecord_5.1.gemfile
+    - rvm: 1.9.3
+      gemfile: gemfiles/activerecord_6.0.gemfile
+    - rvm: 1.9.3
+      gemfile: gemfiles/activerecord_master.gemfile
+    - rvm: 2.2.5
+      gemfile: gemfiles/activerecord_2.3.gemfile
+    - rvm: 2.2.5
+      gemfile: gemfiles/activerecord_6.0.gemfile
+    - rvm: 2.2.5
+      gemfile: gemfiles/activerecord_master.gemfile
+    - rvm: 2.3.1
+      gemfile: gemfiles/activerecord_2.3.gemfile
+    - rvm: 2.3.1
+      gemfile: gemfiles/activerecord_6.0.gemfile
+    - rvm: 2.3.1
+      gemfile: gemfiles/activerecord_master.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/activerecord_2.3.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/activerecord_3.2.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/activerecord_4.0.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/activerecord_4.1.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/activerecord_6.0.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/activerecord_master.gemfile
+    - rvm: 2.5
+      gemfile: gemfiles/activerecord_2.3.gemfile
+    - rvm: 2.5
+      gemfile: gemfiles/activerecord_3.2.gemfile
+    - rvm: 2.5
+      gemfile: gemfiles/activerecord_4.0.gemfile
+    - rvm: 2.5
+      gemfile: gemfiles/activerecord_4.1.gemfile
+    - rvm: 2.6
+      gemfile: gemfiles/activerecord_2.3.gemfile
+    - rvm: 2.6
+      gemfile: gemfiles/activerecord_3.2.gemfile
+    - rvm: 2.6
+      gemfile: gemfiles/activerecord_4.0.gemfile
+    - rvm: 2.6
+      gemfile: gemfiles/activerecord_4.1.gemfile
+
+
+
